[workspace]
members = [
	"crates/haversine",
	"crates/profiler",
	"crates/profiler-macros",
]
resolver = "2"

[workspace.package]
name = "haversine-rs"
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.48", features = ["derive"] }
libc = "0.2.178"
proc-macro2 = "1.0.106"
quote = "1.0.44"
rand = "0.9.2"
syn = "2.0.117"
