[package]
name = "profiler"
version.workspace = true
edition.workspace = true

[lib]
name = "profiler"

[dependencies]

anyhow = { workspace = true }
clap = { workspace = true }
libc = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
rand = { workspace = true }
syn = { workspace = true }

